# typed-llm-council

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSION_SEED.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/commands/: council.md  review-pr.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design-feedback.yml  feature_request.yml
.github/workflows/: ci.yml  council-reviewer-cron.yml  pr-review.yml
docs/: council_quickstart.md  council_spec_v2.2.md  design_notes.md  hermes_findings_status.md  internal_spec_v2.2.md  operator_setup.md  release_process.md
docs/plans/: 2026-05-26-post-pr-7-improvements.md  2026-05-26-public-credibility-cleanup.md  2026-05-27-council-v0-ready-to-share.md  2026-05-27-oauth-migration.md  2026-05-27-pr-review-bot.md  2026-05-27-professional-release-prep.md  2026-05-27-release-hardening-followup.md  2026-05-27-reviewer-cron-safety-gates.md  2026-05-27-reviewer-cron.md  2026-05-27-slash-command-pivot.md  TEMPLATE.md
docs/reviews/: 13-iter1.md  24-iter1.md  29-iter1.md  README.md
examples/: README.md  stage3_verification_demo.py
orchestrator/: __init__.py  config.toml  supervisor.py
orchestrator/adapters/: _common.py  base.py  claude.py  gemini.py  gpt.py  grok.py  kimi.py  qwen.py
orchestrator/schemas/: acemad_vote.py  claim_judgment.py  convergence.py  stage_output.py  verifier_input.py
orchestrator/services/: comparator.py  leak_filter.py
orchestrator/stages/: stage3_verification.py
orchestrator/tests/: test_adapter_smoke.py  test_comparator.py  test_config_and_packaging.py  test_convergence_cli.py  test_convergence_ledger.py  test_cove_isolation.py  test_leak_filter.py  test_pr_review_bot.py  (+1 more)
(+7 files in other folders)
